Added WIP. Checking with github since it uses latest mermaid version

--- a/Obsidian Vault/Infrastructure/02. Docker.md
+++ b/Obsidian Vault/Infrastructure/02. Docker.md
@@ -227,8 +227,16 @@ services:
       - <./local/path>:</path/in/container>
 
 volumes:
-  # Empty. Creates a persistent volume
+  # Empty = Creates a (default) named volume
   <volume_name>:
+
+networks:
+  <network-name>:
+    # none, bridge, host
+    driver: <driver-type>
+      ipam:
+        config:
+          - subnet: <ip>/<>
 ```
 
 ---
