--- a/Obsidian Vault/Infrastructure/02. Docker.md
+++ b/Obsidian Vault/Infrastructure/02. Docker.md
@@ -234,6 +234,7 @@ networks:
   <network-name>:
     # none, bridge, host
     driver: <driver-type>
+      # IP Address Management. Configure custom IP ranges and subnets
       ipam:
         config:
           - subnet: <ip>/<>
