--- a/Obsidian Vault/Infrastructure/06. Ansible.md
+++ b/Obsidian Vault/Infrastructure/06. Ansible.md
@@ -1,17 +1,30 @@
 
-ansible-playbook <playbook_name.yaml>
-
-ansible-playbook <playbook_name.yaml> --check  Run in "dry-mode"
-ansible-playbook <playbook_name.yaml> --check --diff      See the differences "before-after" running a playbook
-ansible-playbook <playbook_name.yaml> --syntax-check  Check for syntax errors
-
-ansible-lint   Potential errors, bugs, inconsistency
 
 
-From network
-ansible-galaxy collection install network.juniper
-Locally
-ansible-galaxy collection install -r requirements.yml
+| Command                                             | Description                                           |
+| --------------------------------------------------- | ----------------------------------------------------- |
+| `ansible-playbook <playbook_name>.yaml <--options>` |                                                       |
+| `--check`                                           | Run in "dry-mode"                                     |
+| `--check --diff`                                    | See the differences "before-after" running a playbook |
+| `--syntax-check`                                    | Check for syntax errors                               |
+|                                                     |                                                       |
+|                                                     |                                                       |
+|                                                     |                                                       |
+
+
+|                |                                       |
+| -------------- | ------------------------------------- |
+| `ansible-lint` | Potential errors, bugs, inconsistency |
+
+
+|                                                         |              |
+| ------------------------------------------------------- | ------------ |
+| `ansible-galaxy collection install network.juniper`     | From Network |
+| `ansible-galaxy collection install -r requirements.yml` | Locally      |
+| `ansible-galaxy init <name>`                            |              |
+
+   
+
 
 
 install
@@ -28,6 +41,6 @@ ansible-playbook -i localhost, command.yml -vv
 Check "become: yes"
 
 
-ansible-galaxy init [name]
+
 
 recheck course ansible: section 8: ch 43: lab
