--- a/Obsidian Vault/Infrastructure/04. Kubernetes.md
+++ b/Obsidian Vault/Infrastructure/04. Kubernetes.md
@@ -113,6 +113,7 @@ flowchart TD
 
 ### YAML
 
+#### General
 ```yaml
 # Define the API version
 apiVersion: <api_version>
@@ -132,6 +133,7 @@ spec:
   <config>
 ```
 
+#### Pod
 ```yaml
 apiVersion: v1
 # Pod resource
@@ -153,6 +155,7 @@ spec:
         claimName: <pvc_name>
 ```
 
+#### Deployment
 ```yaml
 apiVersion: apps/v1
 # Deployment resource
@@ -181,6 +184,7 @@ spec:
         - containerPort: <port>
 ```
 
+#### Service
 ```yaml
 apiVersion: v1
 # Service resource
@@ -202,6 +206,7 @@ spec:
   type: <type>
 ```
 
+#### Configuration map
 ```yaml
 apiVersion: v1
 # Configuration map resource
@@ -213,6 +218,7 @@ data:
   <key>: <value>
 ```
 
+#### Secret
 ```yaml
 apiVersion: v1
 # Secret resource
@@ -226,6 +232,7 @@ data:
   password: MWYyZDFlMmU2N2Rm  # base64 encoded value
 ```
 
+#### Persistent Volume (PV)
 ```yaml
 apiVersion: v1
 # Persistent Volume resource
@@ -243,11 +250,11 @@ spec:
     # Can be used only by 1 node (read+write)
     - ReadWriteOnce
     # Can be used by multiple nodes (read only)
-	- ReadOnlyMany
+    - ReadOnlyMany
     # Can be used by multiple nodes (read+write)
-	- ReadWriteMany
-	# Can be used only by 1 pod
-	- ReadWriteOncePod
+    - ReadWriteMany
+    # Can be used only by 1 pod
+    - ReadWriteOncePod
   # Retain: allows for manual reclamation of the resource
   # Delete: removes both the PV object from Kubernetes and external storage
   # (Deprecated) Recycle
@@ -257,6 +264,7 @@ spec:
     path: /mnt/data
 ```
 
+#### Persistent Volume Claim (PVC)
 ```yaml
 apiVersion: v1
 kind: PersistentVolumeClaim
