Working on Ansible notes

--- a/Obsidian Vault/Infrastructure/06. Ansible.md
+++ b/Obsidian Vault/Infrastructure/06. Ansible.md
@@ -23,12 +23,41 @@
 | `ansible-galaxy collection install -r requirements.yml` | Locally      |
 | `ansible-galaxy init <name>`                            |              |
 
-   
+```sh
+ansible all -m ping
+```
+
+```sh
+# The playbook file to execute
+ansible-playbook <playbook>.yml
+```
+
+```sh
+ansible-galaxy install username.role_name
+```
+
+```sh
+# Manages encrypted files
+ansible-vault create secrets.yml
+```
+
+```sh
+# Displays documentation on Ansible modules
+ansible-doc <module>
+```
+
+```sh
+# Displays the current configuration
+ansible-config view
+```
+
+ansible all -m ping
 
 
 
-install
-sudo yum install ansible -y
+
+
+
 ansible-galaxy install geerlingguy.nodejs -p /home/bob/playbooks/roles
 ```sh
 ansible -i inventory node01 -m ping -v
@@ -41,6 +70,125 @@ ansible-playbook -i localhost, command.yml -vv
 Check "become: yes"
 
 
+|                    |                            |
+| ------------------ | -------------------------- |
+| `ansible`          | Runs single tasks          |
+| `ansible-playbook` | Executes playbooks.        |
+| `ansible-galaxy`   | Manages roles              |
+| `ansible-vault`    | Handles encrypted files    |
+| `ansible-doc`      | Shows module documentation |
+| `ansible-config`   | Manages configurations     |
+
+
+|             |                                      |
+| ----------- | ------------------------------------ |
+| `Inventory` | Defines hosts and groups             |
+| `Playbooks` | Sequence of tasks to be executed     |
+| `Roles`     | Group tasks, handlers, and variables |
+
 
 
 recheck course ansible: section 8: ch 43: lab
+
+```ini
+[all]
+host1 ansible_host=192.168.1.10
+host2 ansible_host=192.168.1.11
+
+[webservers]
+host1
+
+[dbservers]
+host2
+```
+
+
+```yaml
+ # Start of YAML file
+---
+  # Name of this script
+- name: <play_name>
+  
+  # Name of host(s) where tasks will run
+  hosts: <host/hosts_list>
+
+  # Runs tasks as sudo
+  become: yes
+
+  # List of tasks. A task is one action
+  tasks:
+    # One task. Set name of task
+    - name: <task_name>
+      # Command to be executed on selected hosts.
+      # Example command: date
+      command: <command>
+
+    # Another task
+    - name: <task_name>
+      service:
+        name: httpd
+        state: started
+
+    
+    - name: Install Nginx
+        apt:
+          name: nginx
+          state: present
+        tags: install
+      # Executes only if statement is true
+      when: <condition1> == <condition2> AND <condition1> != condition3>
+
+    
+    - name: Set file permissions
+      file:
+        # The path or directory to be managed
+        path: <path/or/directory>
+        # Sets the owner for the path
+        owner: <name>
+        # Sets the group for the path
+        group: <group_name>
+        # Sets the permission for the path
+        # Example '0777' full access
+        mode: <access>
+        # Ensures the path is the state
+        # Example directory. Checks that the path is a directory
+        state: <state>
+      tags: set_permissions
+
+    - name: <task_name>
+      #
+      lineinfile:
+        # Path to file
+        path: <path/to/file>
+        # Line of text to be added to file if it doesn't exist
+        line: <line>
+      
+```
+
+
+```yaml
+when: a == b
+```
+
+
+```yaml
+---
+- name: Update apt cache
+  apt:
+    update_cache: yes
+
+- name: Install common packages
+  apt:
+    name: "{{ item }}"
+    state: present
+
+  # Will execute the tasks for each {{ item }} inside of loop
+  loop:
+    - curl
+    - git
+    - vim
+```
+
+```yaml
+roles
+```
