Added example yaml for Ansible

--- a/Obsidian Vault/Infrastructure/06. Ansible.md
+++ b/Obsidian Vault/Infrastructure/06. Ansible.md
@@ -86,7 +86,7 @@ Check "become: yes"
 | `Playbooks` | Sequence of tasks to be executed     |
 | `Roles`     | Group tasks, handlers, and variables |
 
-
+Jinja
 
 recheck course ansible: section 8: ch 43: lab
 
@@ -191,4 +191,44 @@ when: a == b
 
 ```yaml
 roles
+```
+
+Example
+```yaml
+---
+- name: Example playbook
+  hosts: all
+  vars:
+    my_variable: "my test"
+    my_bool: true
+    my_list:
+      - Potato
+      - Tomato
+
+  tasks:
+    - name: Print variable
+      ansible.builtin.debug:
+        msg: "The value of my_variable is: {{ my_variable }}"
+
+    - name: Condition
+      ansible.builtin.debug:
+        msg: "Condition is true"
+        when: my_bool
+
+    - name: Print a list
+      ansible.builtin.debug:
+        var: item
+      loop: "{{ my_list }}"
+
+    - name: Notify handler on condition
+      ansible.builtin.debug:
+        msg: "Condition is true and will call the handler"
+      notify: my_handler
+      when: my_variable == "my test" AND my_bool == true
+  
+  handlers:
+    - name: my_handler
+      ansible.builtin.debug:
+        msg: "My handler was notified"
+
 ```
