Updates to Ansible and added a "sketch" for Linux

--- a/Obsidian Vault/Infrastructure/06. Ansible.md
+++ b/Obsidian Vault/Infrastructure/06. Ansible.md
@@ -136,7 +136,7 @@ host2
           state: present
         tags: install
       # Executes only if statement is true
-      when: <condition1> == <condition2> AND <condition1> != condition3>
+      when: <condition1> == <condition2> and <condition1> != <condition3>
 
     
     - name: Set file permissions
