Added parts for Network

--- a/Obsidian Vault/Infrastructure/02. Docker.md
+++ b/Obsidian Vault/Infrastructure/02. Docker.md
@@ -101,6 +101,8 @@ Blueprint for containers. Cannot be changed without rebuilding.
 | `docker top <container-name>`                                                      | Display the running processes of a container                             |
 | `docker diff <container-name>`                                                     | Inspect the difference between container and its image                   |
 
+### Batch
+
 | Command                                                | Explanation       |
 | ------------------------------------------------------ | ----------------- |
 | `docker -ps -q (-a) \| foreach { docker <command> $_}` | Pwsh `-a` for all |
@@ -202,6 +204,7 @@ Same as .gitignore, excludes files from being copied reducing size and improving
 | `docker-compose build`          | (Re)builds services                           |
 | `docker-compose exec <command>` | Execute a command in a running container      |
 
+### docker-compose.yaml
 
 ```yml
 services:
