--- a/Obsidian Vault/Infrastructure/06. Ansible.md
+++ b/Obsidian Vault/Infrastructure/06. Ansible.md
@@ -86,9 +86,58 @@ Check "become: yes"
 | `Playbooks` | Sequence of tasks to be executed     |
 | `Roles`     | Group tasks, handlers, and variables |
 
-Jinja
+### Ansible Extra Variables
+
+Can modify variables defined into a playbook by using `--extra-vars` at command execution.
+Extra vars:
++ Assignment: `--extra-vars "[var_name]=[new_value]"`
++ JSON: `--extra-vars '{"[var_name]":"[new_value]"}'`
++ JSON/YAML file: `--extra-vars "@[filename].json"`
+### Ansible multi-line
+
+Writing a variable on multiple lines can be done by adding a `literal block scalar` or `folded block scalar`
++ `literal block scalar` `|` : It keeps the new lines, therefore will add `\\n` after each line
++ `folded block scalar` `>` : It puts everything on a single line
++ Remove the last `\\n` :  `|-` and `>-`
+Example
+```yaml
+vars:
+  literal_block_scalar: |
+    these lines
+    will break
+    on different lines
+  folded_block_scalar: >
+    but this one
+    will appear
+    as a single line
+tasks:
+  - name: Literal block scalar
+    ansible.builtin.debug:
+      msg: "{{ literal_block_scalar }}"
+  - name: Folded block scalar
+    ansible.builtin.debug:
+      msg: "{{ folded_block_scalar }}"
+```
+
+Output
+```json
+/* Literal block scalar */
+{
+  msg: "these lines\nwill break\non different lines\n"
+}
+/* Folded block scalar */
+{
+  msg: "but this one will appear as a single line\n"
+}
+```
+
+To print it on different lines can add `.split('\n')` variable name
+
+## Jinja
 
 recheck course ansible: section 8: ch 43: lab
+
+## Inventory
 
 ```ini
 [all]
@@ -102,6 +151,7 @@ host1
 host2
 ```
 
+## Playbook YAML
 
 ```yaml
  # Start of YAML file
@@ -165,11 +215,13 @@ host2
       
 ```
 
+### Condition
 
 ```yaml
 when: a == b
 ```
 
+### Loop
 
 ```yaml
 ---
