--- a/Obsidian Vault/Infrastructure/06. Ansible.md
+++ b/Obsidian Vault/Infrastructure/06. Ansible.md
@@ -123,11 +123,11 @@ Output
 ```json
 /* Literal block scalar */
 {
-  msg: "these lines\nwill break\non different lines\n"
+  "msg": "these lines\nwill break\non different lines\n"
 }
 /* Folded block scalar */
 {
-  msg: "but this one will appear as a single line\n"
+  "msg": "but this one will appear as a single line\n"
 }
 ```
 
