Small things, various files

--- a/Obsidian Vault/Infrastructure/06. Ansible.md
+++ b/Obsidian Vault/Infrastructure/06. Ansible.md
@@ -143,6 +143,10 @@ recheck course ansible: section 8: ch 43: lab
 [all]
 host1 ansible_host=192.168.1.10
 host2 ansible_host=192.168.1.11
+# ansible_connection=ssh/winrm/localhost
+# ansible_port=22/5986
+# asible_user=root/administrator
+# ansible_ssh_pass=password
 
 [webservers]
 host1
@@ -235,6 +239,7 @@ when: a == b
     state: present
 
   # Will execute the tasks for each {{ item }} inside of loop
+  # or with_items:
   loop:
     - curl
     - git
