--- a/Obsidian Vault/Infrastructure/05. Ansible installation.md
+++ b/Obsidian Vault/Infrastructure/05. Ansible installation.md
@@ -1,12 +1,12 @@
 
 https://docs.ansible.com/ansible/latest/installation_guide/installation_distros.html
 
-sudo apt update && sudo apt upgrade
-sudo apt install ansible
+`sudo apt install ansible`
 
-sudo apt install python3 python3-pip
-sudo apt upgrade python3 python3-pip
-python3 -m venv ansible-lint-env
-source ansible-lint-env/bin/activate
-pip install ansible-lint
-ansible-lint --version
+# ansible-lint
+`sudo apt install python3 python3-pip`
+`sudo apt upgrade python3 python3-pip`
+`python3 -m venv ansible-lint-env`
+`source ansible-lint-env/bin/activate`
+`pip install ansible-lint`
+`ansible-lint --version`
