Updating Git and GitHub Actions

--- a/Obsidian Vault/Infrastructure/05. Ansible installation.md
+++ b/Obsidian Vault/Infrastructure/05. Ansible installation.md
@@ -10,3 +10,7 @@ https://docs.ansible.com/ansible/latest/installation_guide/installation_distros.
 `source ansible-lint-env/bin/activate`
 `pip install ansible-lint`
 `ansible-lint --version`
+
+
+# ansible config
+
