--- a/Obsidian Vault/Infrastructure/01. Docker installation.md
+++ b/Obsidian Vault/Infrastructure/01. Docker installation.md
@@ -1,3 +1,5 @@
+
+#### Linux:
 `sudo apt install docker.io`
 `sudo systemctl status docker`
 + If the service is not enabled and started run:
@@ -6,7 +8,7 @@
 
 Add user to docker group so there is no need to run `sudo` for `docker` commands:
 + `sudo usermod -aG docker <username>`
-+ Log out will be needed to reevaluate group membership
++ Log out will be needed to re-evaluate group membership
 
 Test that it is working
 `docker run hello-world`
@@ -14,3 +16,8 @@ Test that it is working
 ## docker-compose
 
 `sudo apt install docker-compose`
+
+Windows:
+- `whoami`
+- `net localgroup docker-users "username" /ADD`
++ Log out will be needed to re-evaluate group membership
