--- a/Obsidian Vault/Infrastructure/01. Docker installation.md
+++ b/Obsidian Vault/Infrastructure/01. Docker installation.md
@@ -1,5 +1,6 @@
 
-#### Linux:
+## Linux:
+
 `sudo apt install docker.io`
 `sudo systemctl status docker`
 + If the service is not enabled and started run:
@@ -17,7 +18,8 @@ Test that it is working
 
 `sudo apt install docker-compose`
 
-Windows:
+## Windows:
+
 - `whoami`
 - `net localgroup docker-users "username" /ADD`
 + Log out will be needed to re-evaluate group membership
