Working on powershell

--- a/Obsidian Vault/Infrastructure/02. Docker.md
+++ b/Obsidian Vault/Infrastructure/02. Docker.md
@@ -59,6 +59,8 @@ Blueprint for containers. Cannot be changed without rebuilding.
 | `docker image history <image-name>`                | View the layers of selected image      |
 | `docker pull <registry>/<user>/<repository>:<tag>` | Download locally a version of an image |
 | `docker push <registry>/<user>/<repository>:<tag>` | Upload to a registry a local image     |
+| `docker save -o <path/tar/file> <image-name>`      | Save an image as tar archive           |
+| `docker load -i <path/tar/file>`                   | Load a tar archive as a docker image   |
 
 | Command                                              | Explanation |
 | ---------------------------------------------------- | ----------- |
@@ -96,7 +98,7 @@ Blueprint for containers. Cannot be changed without rebuilding.
 |                                                                                    |                                                                          |
 | `docker cp <container>:<container-path> <host-path`                                | Copy the files from container to host.<br>(host to container also works) |
 | `docker export <container>`                                                        | Export a container's filesystem as a tar archive                         |
-|                                                                                    |                                                                          |
+| `docker import <file>`                                                             | Import a tar archive as a container                                      |
 | `docker logs <container-name>`                                                     | Fetch the logs of a container                                            |
 | `docker logs -f <container-name>`                                                  | Follow log output                                                        |
 | `docker top <container-name>`                                                      | Display the running processes of a container                             |
