--- a/Obsidian Vault/Infrastructure/06. Ansible.md
+++ b/Obsidian Vault/Infrastructure/06. Ansible.md
@@ -18,11 +18,11 @@
 | `ansible-lint` | Potential errors, bugs, inconsistency |
 
 
-|                                                         |              |
-| ------------------------------------------------------- | ------------ |
-| `ansible-galaxy collection install network.juniper`     | From Network |
-| `ansible-galaxy collection install -r requirements.yml` | Locally      |
-| `ansible-galaxy init <name>`                            |              |
+|                                                         |                    |
+| ------------------------------------------------------- | ------------------ |
+| `ansible-galaxy collection install network.juniper`     | From Network       |
+| `ansible-galaxy collection install -r requirements.yml` | Locally            |
+| `ansible-galaxy init <name>`                            | Initialize project |
 
 ```sh
 ansible all -m ping
@@ -86,7 +86,50 @@ Check "become: yes"
 | `Inventory` | Defines hosts and groups             |
 | `Playbooks` | Sequence of tasks to be executed     |
 | `Roles`     | Group tasks, handlers, and variables |
+Example of folder structure:
+```shell
+production                # inventory file for production servers
+staging                   # inventory file for staging environment
 
+group_vars/
+   group1.yml             # here we assign variables to particular groups
+   group2.yml
+host_vars/
+   hostname1.yml          # here we assign variables to particular systems
+   hostname2.yml
+
+library/                  # if any custom modules, put them here (optional)
+module_utils/             # if any custom module_utils to support modules, put them here (optional)
+filter_plugins/           # if any custom filter plugins, put them here (optional)
+
+site.yml                  # main playbook
+webservers.yml            # playbook for webserver tier
+dbservers.yml             # playbook for dbserver tier
+tasks/                    # task files included from playbooks
+    webservers-extra.yml  # <-- avoids confusing playbook with task files
+roles/
+    common/               # this hierarchy represents a "role"
+        tasks/            #
+            main.yml      #  <-- tasks file can include smaller files if warranted
+        handlers/         #
+            main.yml      #  <-- handlers file
+        templates/        #  <-- files for use with the template resource
+            ntp.conf.j2   #  <------- templates end in .j2
+        files/            #
+            bar.txt       #  <-- files for use with the copy resource
+            foo.sh        #  <-- script files for use with the script resource
+        vars/             #
+            main.yml      #  <-- variables associated with this role
+        defaults/         #
+            main.yml      #  <-- default lower priority variables for this role
+        meta/             #
+            main.yml      #  <-- role dependencies and optional Galaxy info
+        library/          # roles can also include custom modules
+        module_utils/     # roles can also include custom module_utils
+        lookup_plugins/   # or other types of plugins, like lookup in this case
+
+    webtier/              # same kind of structure as "common" was above, done for the webtier role
+```
 ### Ansible Extra Variables
 
 Can modify variables defined into a playbook by using `--extra-vars` at command execution.
@@ -138,12 +181,12 @@ To print it on different lines can add `.split('\n')` variable name
 
 recheck course ansible: section 8: ch 43: lab
 
-## Inventory
 
 ```ini
 [all]
 host1 ansible_host=192.168.1.10
 host2 ansible_host=192.168.1.11
+localhost ansible_connection=local
 # ansible_connection=ssh/winrm/localhost
 # ansible_port=22/5986
 # asible_user=root/administrator
