Added linux special permissions and system information. Added ansible register chapter

--- a/Obsidian Vault/Infrastructure/02. Docker.md
+++ b/Obsidian Vault/Infrastructure/02. Docker.md
@@ -95,8 +95,9 @@ Blueprint for containers. Cannot be changed without rebuilding.
 | `–-mount type=bind,source=<source/path>,target=<path/in/container> <image-name>`   | Equivalent to the command above                                          |
 |                                                                                    |                                                                          |
 | `docker exec (-it) <container> <command>`                                          | Execute command inside of container                                      |
+| `docker exec -it <container> sh/bash`                                              | Enter the container to execute commands                                  |
 |                                                                                    |                                                                          |
-| `docker cp <container>:<container-path> <host-path`                                | Copy the files from container to host.<br>(host to container also works) |
+| `docker cp <container>:<container-path> <host-path>`                               | Copy the files from container to host.<br>(host to container also works) |
 | `docker export <container>`                                                        | Export a container's filesystem as a tar archive                         |
 | `docker import <file>`                                                             | Import a tar archive as a container                                      |
 | `docker logs <container-name>`                                                     | Fetch the logs of a container                                            |
@@ -185,7 +186,7 @@ EXPOSE <port>
 ENTRYPOINT ["<script>", "<path/to/script.extension"]
 
 # Default command when container runs. Overriden with docker run
-CMD  ["", "path/to/script.extension"]
+CMD  ["<command>", "path/to/script.extension"]
 
 ```
 
@@ -196,16 +197,16 @@ Same as .gitignore, excludes files from being copied reducing size and improving
 ---
 ## Docker-compose
 
-| Command                         | Explanation                                   |
-| ------------------------------- | --------------------------------------------- |
-| `docker-compose up <option>`    | Builds, (re)creates), and attaches conteiners |
-| `-d`                            | Detached mode                                 |
-| `--rm`                          | Remove after down                             |
-| `docker-compose down`           | Stops and removes everything created by up    |
-| `docker-compose start`          | Starts existing containers                    |
-| `docker-compose stop`           | Stops containers without removing them        |
-| `docker-compose build`          | (Re)builds services                           |
-| `docker-compose exec <command>` | Execute a command in a running container      |
+| Command                         | Explanation                                  |
+| ------------------------------- | -------------------------------------------- |
+| `docker-compose up <option>`    | Builds, (re)creates, and attaches conteiners |
+| `-d`                            | Detached mode                                |
+| `--rm`                          | Remove after down                            |
+| `docker-compose down`           | Stops and removes everything created by up   |
+| `docker-compose start`          | Starts existing containers                   |
+| `docker-compose stop`           | Stops containers without removing them       |
+| `docker-compose build`          | (Re)builds services                          |
+| `docker-compose exec <command>` | Execute a command in a running container     |
 
 ### docker-compose.yaml
 
