--- a/Obsidian Vault/Infrastructure/06. Ansible.md
+++ b/Obsidian Vault/Infrastructure/06. Ansible.md
@@ -177,10 +177,12 @@ Output
 
 To print it on different lines can add `.split('\n')` variable name
 
-## Jinja
+## Templates / Jinja
 
 recheck course ansible: section 8: ch 43: lab
 
+
+## Inventory
 
 ```ini
 [all]
@@ -336,3 +338,29 @@ Example
 
 
 # Register
+
+> [!NOTE]
+> Register is a mechanism for capturing a task’s output and storing it in a variable for use in later tasks.
+
+```yaml
+# Example using it to print output later
+- name: Check available disk space on the system
+  command: df -h
+  register: disk_check
+
+- name: Display the captured disk space information
+  debug:
+    var: disk_check.stdout
+
+# Example using it for condition 
+- name: Check if nginx is installed
+  command: rpm -q nginx
+  register: nginx_check
+  ignore_errors: true
+
+- name: Start nginx if it is installed
+  service:
+    name: nginx
+    state: started
+  when: nginx_check.rc == 0
+```
